docs/blog/hashtag/raspberrypi/feed
<?xml version="1.0" encoding="UTF-8"?><rss version="2.0"
	xmlns:content="http://purl.org/rss/1.0/modules/content/"
	xmlns:wfw="http://wellformedweb.org/CommentAPI/"
	xmlns:dc="http://purl.org/dc/elements/1.1/"
	xmlns:atom="http://www.w3.org/2005/Atom"
	xmlns:sy="http://purl.org/rss/1.0/modules/syndication/"
	xmlns:slash="http://purl.org/rss/1.0/modules/slash/"
	
	xmlns:georss="http://www.georss.org/georss"
	xmlns:geo="http://www.w3.org/2003/01/geo/wgs84_pos#"
	>

<channel>
	<title>#RaspberryPi &#8211; HippoBlog</title>
	<atom:link href="https://blog.hippohack.me/hashtag/raspberrypi/feed" rel="self" type="application/rss+xml" />
	<link>https://blog.hippohack.me</link>
	<description>Web開発に関する備忘録や日々の雑記ブログ</description>
	<lastBuildDate>Sat, 13 Jul 2019 00:42:19 +0000</lastBuildDate>
	<language>ja</language>
	<sy:updatePeriod>
	hourly	</sy:updatePeriod>
	<sy:updateFrequency>
	1	</sy:updateFrequency>
	<generator>https://wordpress.org/?v=5.7.13</generator>

<image>
	<url>https://blog.hippohack.me/_cms/wp-content/uploads/2021/03/image.jpg</url>
	<title>#RaspberryPi &#8211; HippoBlog</title>
	<link>https://blog.hippohack.me</link>
	<width>32</width>
	<height>32</height>
</image> 
<site xmlns="com-wordpress:feed-additions:1">190967550</site>	<item>
		<title>[raspi] ラズパイにDockerをインストールする（蛇足あり）</title>
		<link>https://blog.hippohack.me/web/124</link>
		
		<dc:creator><![CDATA[@hippohack]]></dc:creator>
		<pubDate>Sat, 13 Jul 2019 00:35:40 +0000</pubDate>
				<guid isPermaLink="false">https://blog.hippohack.me/?post_type=web&#038;p=124</guid>

					<description><![CDATA[ちゃんとラズビアン対応してるのがおもしろい。 旧バージョンの削除 $ sudo apt-get remove docker docker-engine docker.io あるなら、/var/lib/docker/ にも [&#8230;]]]></description>
										<content:encoded><![CDATA[<p>ちゃんとラズビアン対応してるのがおもしろい。</p>
<h2>旧バージョンの削除</h2>
<pre><code>$ sudo apt-get remove docker docker-engine docker.io
</code></pre>
<p>あるなら、<code>/var/lib/docker/</code> にもろもろあるはず。</p>
<h2>Docker CEのインストール</h2>
<p>基本的には、Dockerのリポジトリを設定してからインストールする必要があるみたいやが、ラズビアンについては除外されるみたい。</p>
<p><img src="https://blog.hippohack.me/_cms/wp-content/uploads/2019/07/5CA3AF96-A967-47E0-B928-076000DB7CAB-1024x153.png" alt="" width="1024" height="153" class="alignnone size-large wp-image-125" style="max-width:100%" srcset="https://blog.hippohack.me/_cms/wp-content/uploads/2019/07/5CA3AF96-A967-47E0-B928-076000DB7CAB.png 1024w, https://blog.hippohack.me/_cms/wp-content/uploads/2019/07/5CA3AF96-A967-47E0-B928-076000DB7CAB.png 300w, https://blog.hippohack.me/_cms/wp-content/uploads/2019/07/5CA3AF96-A967-47E0-B928-076000DB7CAB.png 768w, https://blog.hippohack.me/_cms/wp-content/uploads/2019/07/5CA3AF96-A967-47E0-B928-076000DB7CAB.png 1610w" sizes="(max-width: 1000px) 100vw, 1000px" /></p>
<h3>用意されたスクリプトでインストールする</h3>
<pre><code>$ curl -fsSL https://get.docker.com -o get-docker.sh

$ sudo sh get-docker.sh 
# Executing docker install script, commit: 4957679
+ sh -c apt-get update -qq &gt;/dev/null
W: http://deb.goaccess.io/dists/jessie/InRelease の取得に失敗しました  期待されるエントリ 'main/binary-armhf/Packages' が Release ファイル内に見つかりません (誤った sources.list エントリか、壊れたファイル)

E: いくつかのインデックスファイルのダウンロードに失敗しました。これらは無視されるか、古いものが代わりに使われます。
</code></pre>
<p>なんか全然あかんかったけど？？？</p>
<p>で、結局イチからやることに。ということで「インストール」に戻る。</p>
<h3>Docker repositoryのセットアップ</h3>
<pre><code>$ sudo apt-get update

$ sudo apt-get install \
     apt-transport-https \
     ca-certificates \
     curl \
     gnupg2 \
     software-properties-common
</code></pre>
<p>official GPG key の追加（？）</p>
<pre><code>$ curl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add -
</code></pre>
<p>フィンガープリントの確認</p>
<pre><code>$ sudo apt-key fingerprint 0EBFCD88
</code></pre>
<p>リポジトリの指定 [ armhf ] のタブ ← ここ注意。ずっと違うやつでやっててはまった。</p>
<pre><code>$ echo "deb [arch=armhf] https://download.docker.com/linux/$(. /etc/os-release; echo "$ID") \
     $(lsb_release -cs) stable" | \
    sudo tee /etc/apt/sources.list.d/docker.list

$ sudo apt update
$ sudo apt install docker-ce
$ which docker
/usr/bin/docker
</code></pre>
<p>入った。</p>
<h3>バージョン指定するなら</h3>
<pre><code>$ apt-cache madison docker-ce
 docker-ce | 18.06.1~ce~3-0~raspbian | https://download.docker.com/linux/raspbian/ jessie/stable armhf Packages
 docker-ce | 18.06.0~ce~3-0~raspbian | https://download.docker.com/linux/raspbian/ jessie/stable armhf Packages
 docker-ce | 18.03.1~ce-0~raspbian | https://download.docker.com/linux/raspbian/ jessie/stable armhf Packages
 docker-ce | 18.03.0~ce-0~raspbian | https://download.docker.com/linux/raspbian/ jessie/stable armhf Packages
 docker-ce | 17.12.1~ce-0~raspbian | https://download.docker.com/linux/raspbian/ jessie/stable armhf Packages
 docker-ce | 17.12.0~ce-0~raspbian | https://download.docker.com/linux/raspbian/ jessie/stable armhf Packages
 docker-ce | 17.09.1~ce-0~raspbian | https://download.docker.com/linux/raspbian/ jessie/stable armhf Packages
 docker-ce | 17.09.0~ce-0~raspbian | https://download.docker.com/linux/raspbian/ jessie/stable armhf Packages

$ sudo apt-get install docker-ce=&lt;VERSION_STRING&gt;
</code></pre>
<h3>起動確認</h3>
<pre><code>$ sudo docker run armhf/hello-world
Unable to find image 'armhf/hello-world:latest' locally
latest: Pulling from armhf/hello-world
a0691bf12e4e: Pull complete 
Digest: sha256:9701edc932223a66e49dd6c894a11db8c2cf4eccd1414f1ec105a623bf16b426
Status: Downloaded newer image for armhf/hello-world:latest

Hello from Docker on armhf!
This message shows that your installation appears to be working correctly.

To generate this message, Docker took the following steps:
 1. The Docker client contacted the Docker daemon.
 2. The Docker daemon pulled the "hello-world" image from the Docker Hub.
 3. The Docker daemon created a new container from that image which runs the
    executable that produces the output you are currently reading.
 4. The Docker daemon streamed that output to the Docker client, which sent it
    to your terminal.

To try something more ambitious, you can run an Ubuntu container with:
 $ docker run -it ubuntu bash

Share images, automate workflows, and more with a free Docker Hub account:
 https://hub.docker.com

For more examples and ideas, visit:
 https://docs.docker.com/engine/userguide/
</code></pre>
<h3>アップデートするとき</h3>
<pre><code>$ sudo apt-get update
</code></pre>
<h2>起動時に有効化</h2>
<pre><code>$ sudo systemctl enable docker
$ sudo systemctl start docker
</code></pre>
<h2>Install Docker Compose for Raspbian</h2>
<p><code>pip</code> を使うんだって。</p>
<pre><code>$ sudo pip install docker-compose
︙
Compiling /tmp/pip-build-zy5iHD/docker/docker/api/mixin.py ...
  File "/tmp/pip-build-zy5iHD/docker/docker/api/mixin.py", line 8
    base_url: str = ''
            ^
SyntaxError: invalid syntax
︙
</code></pre>
<p>なんかやばそうだが、はいったみたい。</p>
<pre><code>$ which docker-compose
/usr/local/bin/docker-compose
</code></pre>
<h2>インストール後の手順</h2>
<p>sudoつけないとdocker runできないのでユーザーの設定はしたほうがいいかも。</p>
<pre><code>$ sudo groupadd docker 
$ sudo usermod -aG docker $USER
</code></pre>
<p>要リスタート。</p>
<h2>参考</h2>
<ul>
<li><a href="https://docs.docker.com/install/linux/docker-ce/debian/">Get Docker CE for Debian | Docker Documentation</a></li>
<li><a href="https://withblue.ink/2017/12/31/yes-you-can-run-docker-on-raspbian.html">Yes, you can run Docker on Raspbian | With Blue Ink</a></li>
<li><a href="https://docs.docker.com/install/linux/linux-postinstall/#configure-docker-to-start-on-boot">Post-installation steps for Linux | Docker Documentation</a></li>
</ul>
]]></content:encoded>
					
		
		
		<post-id xmlns="com-wordpress:feed-additions:1">124</post-id>	</item>
		<item>
		<title>[raspi] MacからVNCでラズパイを操作する</title>
		<link>https://blog.hippohack.me/web/123</link>
		
		<dc:creator><![CDATA[@hippohack]]></dc:creator>
		<pubDate>Fri, 12 Jul 2019 23:51:01 +0000</pubDate>
				<guid isPermaLink="false">https://blog.hippohack.me/?post_type=web&#038;p=123</guid>

					<description><![CDATA[当初スマホから、と思ってやってみたが微妙。キーボードを使えばひょっとするとマシかもしれないが。 でとりあえず、Macからにした。Finderで「⌘+k」で接続先入力する。 iPhoneでやったのと同じように192.168 [&#8230;]]]></description>
										<content:encoded><![CDATA[<p>当初スマホから、と思ってやってみたが微妙。キーボードを使えばひょっとするとマシかもしれないが。</p>
<p>でとりあえず、Macからにした。Finderで「⌘+k」で接続先入力する。</p>
<p>iPhoneでやったのと同じように192.168.0.100:1でいいのかとおもいきやそうではなかったみたい。</p>
<p>ってエラー。環境設定変えても影響なし。</p>
<p>で、調べた結果、ポート「:5901」でないとだめ。</p>
<blockquote>
<p>「vnc:192.168.11.x:5901」とタイプする。 （:5901はRaspberry Pi側でVNC接続を受け付けるポートです。）</p>
</blockquote>
<p>とのこと。</p>
<p>で、パスワード入力欄に勧めて接続できた。</p>
<h2>tightvncserverを終了するとき</h2>
<pre><code>tightvncserver -kill :&lt;DISPLAY#&gt;

tightvncserver -kill :1
</code></pre>
<h2>参考</h2>
<ul>
<li><a href="https://deviceplus.jp/hobby/raspberrypi_entry_026/">スマートフォンからラズベリーパイを触ろう！(1)VNC実装編 | Device Plus &#8211; デバプラ</a></li>
<li><a href="http://moyse.hatenablog.jp/entry/2018/01/10/150938">MacからRaspbian StretchにVNCでリモートデスクトップ接続 &#8211; moyse’s diary</a></li>
<li><a href="https://qiita.com/sugasaki/items/8f73b4cb239744ac2570">Raspberry Piの初回設定、wifi自動設定、VNCサーバー起動（Mac） &#8211; Qiita</a></li>
</ul>
]]></content:encoded>
					
		
		
		<post-id xmlns="com-wordpress:feed-additions:1">123</post-id>	</item>
	</channel>
</rss>
